src/test/ui/inference/ambiguous_type_parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/ambiguous_type_parameter.rs:16:19
   |
LL |     InMemoryStore.get_raw(&String::default());
   |                   ^^^^^^^ cannot infer type for type parameter `K`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
